AC-963 fixed spinny not aligning with visible viewport, I think.

--- a/awx/ui/static/less/ansible-ui.less
+++ b/awx/ui/static/less/ansible-ui.less
@@ -148,7 +148,7 @@ textarea {
 /* Working... spinner */
 .spinny {
   display: none;
-  position: absolute;
+  position: fixed;
   z-index: 2000;
   width: 75px;
   height: 75px;
